DTS-42565:Duplicates verification